tests/fail/if_then_else_typed_and_not_typed.err
Semantic Error: break used out of a while or for statement at line 1.
Semantic Error: One of the expressions of the if-then-else statement at line 1 returns but the other does not.
